<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate" />


    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_agent_token"
        android:inputType="textCapWords"
        android:key="dialogflow_agent_token"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_agent_token" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="external_service_switch"
        android:summary="@string/pref_description_external_service_switch"
        android:title="@string/pref_title_external_service_switch" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_service_login_url"
        android:inputType="textCapWords"
        android:key="service_login_url"
        android:maxLines="3"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/pref_title_service_login_url" />


</PreferenceScreen>
