<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/group1">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_title_home" />
        <item
            android:id="@+id/nav_list_res"
            android:icon="@drawable/ic_menu_reservation"
            android:title="@string/menu_title_reservation" />

        <!--<item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />-->
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_title_manage" />
    </group>

    <group android:checkableBehavior="single" android:id="@+id/group2">
        <item
            android:id="@+id/nav_show_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_title_profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_exit"
            android:title="@string/menu_title_exit" />
    </group>

    <!--<item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />&ndash;&gt;
        </menu>
    </item>-->

</menu>
